; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_data.c_test_initterm.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_data.c_test_initterm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_initterm.callbacks = internal global [4 x i32*] zeroinitializer, align 16
@p_initterm = common dso_local global i32 0, align 4
@initcallback = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_initterm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_initterm() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @p_initterm, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %22

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %6

6:                                                ; preds = %14, %5
  %7 = load i32, i32* %1, align 4
  %8 = icmp slt i32 %7, 4
  br i1 %8, label %9, label %17

9:                                                ; preds = %6
  %10 = load i32*, i32** @initcallback, align 8
  %11 = load i32, i32* %1, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds [4 x i32*], [4 x i32*]* @test_initterm.callbacks, i64 0, i64 %12
  store i32* %10, i32** %13, align 8
  br label %14

14:                                               ; preds = %9
  %15 = load i32, i32* %1, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %1, align 4
  br label %6

17:                                               ; preds = %6
  %18 = call i32 @initterm_test(i32** getelementptr inbounds ([4 x i32*], [4 x i32*]* @test_initterm.callbacks, i64 0, i64 0), i32** getelementptr inbounds ([4 x i32*], [4 x i32*]* @test_initterm.callbacks, i64 0, i64 1), i32 1)
  %19 = call i32 @initterm_test(i32** getelementptr inbounds ([4 x i32*], [4 x i32*]* @test_initterm.callbacks, i64 0, i64 0), i32** getelementptr inbounds ([4 x i32*], [4 x i32*]* @test_initterm.callbacks, i64 0, i64 2), i32 2)
  %20 = call i32 @initterm_test(i32** getelementptr inbounds ([4 x i32*], [4 x i32*]* @test_initterm.callbacks, i64 0, i64 0), i32** getelementptr inbounds ([4 x i32*], [4 x i32*]* @test_initterm.callbacks, i64 0, i64 3), i32 3)
  store i32* null, i32** getelementptr inbounds ([4 x i32*], [4 x i32*]* @test_initterm.callbacks, i64 0, i64 1), align 8
  %21 = call i32 @initterm_test(i32** getelementptr inbounds ([4 x i32*], [4 x i32*]* @test_initterm.callbacks, i64 0, i64 0), i32** getelementptr inbounds ([4 x i32*], [4 x i32*]* @test_initterm.callbacks, i64 0, i64 3), i32 2)
  br label %22

22:                                               ; preds = %17, %4
  ret void
}

declare dso_local i32 @initterm_test(i32**, i32**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
